--- a/memberlist.html
+++ b/memberlist.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="memberlist.css">
       <link rel="icon" type="image/png" href="icon-web/person_FILL0_wght400_GRAD0_opsz24.png">
-      <title>Portfolio</title>
+      <title>XANTAREZ</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
